--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_BACKEND_URL=Backend_URL
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_POSTHOG_KEY=posthog_key
 NEXT_PUBLIC_POSTHOG_HOST=posthog_host
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
